Add allAnnualRainfalls
